AuthServiceImpl handles user authentication and registration logic.