@@ -1,14 +1,6 @@
 package com.triquang.service.impl;
 
-import jakarta.persistence.EntityNotFoundException;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.cache.annotation.CacheEvict;
-import org.springframework.cache.annotation.Cacheable;
-import org.springframework.cache.annotation.Caching;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
+import com.triquang.enums.ErrorCode;
 import com.triquang.exception.AirportException;
 import com.triquang.exception.CityException;
 import com.triquang.mapper.AirportMapper;
@@ -19,19 +11,14 @@ import com.triquang.payload.response.AirportResponse;
 import com.triquang.repository.AirportRepository;
 import com.triquang.repository.CityRepository;
 import com.triquang.service.AirportService;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.cache.annotation.*;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Collectors;
-
-/**
- * Service implementation for managing airports.
- * Handles business logic for creating, retrieving, updating, and deleting airport records.
- * Also includes validation and caching mechanisms for performance optimization.
- * 
- * @author Tri Quang
- */
 
 @Service
 @RequiredArgsConstructor
@@ -41,127 +28,171 @@ public class AirportServiceImpl implements AirportService {
     private final AirportRepository airportRepository;
     private final CityRepository cityRepository;
 
+    // =========================
+    // CREATE SINGLE AIRPORT
+    // =========================
     @Override
     @Transactional
-    public AirportResponse createAirport(AirportRequest request) throws AirportException, CityException {
+    @Caching(evict = {
+            @CacheEvict(cacheNames = "allAirports", allEntries = true),
+            @CacheEvict(cacheNames = "airportsByCity", allEntries = true)
+    })
+    public AirportResponse createAirport(AirportRequest request) {
+
+        validateIata(request.getIataCode());
+
         if (airportRepository.findByIataCode(request.getIataCode()).isPresent()) {
-            throw new AirportException("Airport with IATA code " + request.getIataCode() + " already exists.");
+            throw new AirportException(ErrorCode.AIRPORT_ALREADY_EXISTS);
         }
 
         City city = cityRepository.findById(request.getCityId())
-                .orElseThrow(() -> new CityException("City not found with id: " + request.getCityId()));
+                .orElseThrow(() -> new CityException(ErrorCode.CITY_NOT_FOUND));
 
         Airport airport = AirportMapper.toEntity(request);
         airport.setCity(city);
 
-        var savedAirport = airportRepository.save(airport);
-        return AirportMapper.toResponse(savedAirport);
+        return AirportMapper.toResponse(airportRepository.save(airport));
     }
 
+    // =========================
+    // BULK CREATE
+    // =========================
     @Override
     @Transactional
-    public List<AirportResponse> createBulkAirports(List<AirportRequest> requests)
-            throws AirportException, CityException {
-        List<AirportResponse> createdAirports = new ArrayList<>();
-        List<String> skippedCodes = new ArrayList<>();
+    @Caching(evict = {
+            @CacheEvict(cacheNames = "allAirports", allEntries = true),
+            @CacheEvict(cacheNames = "airportsByCity", allEntries = true)
+    })
+    public List<AirportResponse> createBulkAirports(List<AirportRequest> requests) {
 
-        for (AirportRequest request : requests) {
-            if (airportRepository.findByIataCode(request.getIataCode()).isPresent()) {
-                skippedCodes.add(request.getIataCode() + " (already exists)");
-                continue;
-            }
+        return requests.stream()
+                .filter(req -> {
+                    boolean exists = airportRepository.findByIataCode(req.getIataCode()).isPresent();
+                    if (exists) {
+                        log.warn("Skip existing airport: {}", req.getIataCode());
+                    }
+                    return !exists;
+                })
+                .map(req -> {
 
-            Optional<City> cityOpt = cityRepository.findById(request.getCityId());
-            if (cityOpt.isEmpty()) {
-                skippedCodes.add(request.getIataCode() + " (city not found with id: " + request.getCityId() + ")");
-                continue;
-            }
+                    City city = cityRepository.findById(req.getCityId())
+                            .orElseThrow(() -> new CityException(ErrorCode.CITY_NOT_FOUND));
 
-            Airport airport = AirportMapper.toEntity(request);
-            airport.setCity(cityOpt.get());
+                    Airport airport = AirportMapper.toEntity(req);
+                    airport.setCity(city);
 
-            Airport savedAirport = airportRepository.save(airport);
-            createdAirports.add(AirportMapper.toResponse(savedAirport));
-        }
-
-        if (!skippedCodes.isEmpty()) {
-            log.info("Bulk airport creation - skipped: {}", skippedCodes);
-        }
-        
-        log.info("Bulk airport creation - created {} out of {} airports", createdAirports.size(), requests.size());
-
-        return createdAirports;
+                    return AirportMapper.toResponse(airportRepository.save(airport));
+                })
+                .collect(Collectors.toList());
     }
 
+    // =========================
+    // GET BY ID (CACHE)
+    // =========================
     @Override
     @Transactional(readOnly = true)
     @Cacheable(cacheNames = "airports", key = "#id")
     public AirportResponse getAirportById(Long id) {
+
+        validateId(id);
+
         Airport airport = airportRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Airport not found with id: " + id));
+                .orElseThrow(() -> new AirportException(ErrorCode.AIRPORT_NOT_FOUND));
+
         return AirportMapper.toResponse(airport);
     }
 
-
+    // =========================
+    // GET ALL
+    // =========================
     @Override
     @Transactional(readOnly = true)
     @Cacheable(cacheNames = "allAirports")
     public List<AirportResponse> getAllAirports() {
-        return airportRepository.findAll().stream()
+        return airportRepository.findAll()
+                .stream()
                 .map(AirportMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    // =========================
+    // UPDATE
+    // =========================
     @Override
     @Transactional
     @Caching(evict = {
             @CacheEvict(cacheNames = "airports", key = "#id"),
             @CacheEvict(cacheNames = "allAirports", allEntries = true),
-            @CacheEvict(cacheNames = "airportsByIata", allEntries = true),
             @CacheEvict(cacheNames = "airportsByCity", allEntries = true)
     })
-    public AirportResponse updateAirport(Long id, AirportRequest request) throws AirportException, CityException {
-        var existingAirport = airportRepository.findById(id)
-                .orElseThrow(() -> new AirportException("Airport not found with id: " + id));
+    public AirportResponse updateAirport(Long id, AirportRequest request) {
 
-        if (request.getIataCode() != null
-                && !existingAirport.getIataCode().equals(request.getIataCode())
-                && airportRepository.findByIataCode(request.getIataCode()).isPresent()) {
-            throw new AirportException("IATA code " + request.getIataCode() + " is already taken.");
+        Airport airport = airportRepository.findById(id)
+                .orElseThrow(() -> new AirportException(ErrorCode.AIRPORT_NOT_FOUND));
+
+        if (request.getIataCode() != null &&
+                !airport.getIataCode().equals(request.getIataCode()) &&
+                airportRepository.findByIataCode(request.getIataCode()).isPresent()) {
+
+            throw new AirportException(ErrorCode.AIRPORT_ALREADY_EXISTS);
         }
 
         if (request.getCityId() != null) {
-            City newCity = cityRepository.findById(request.getCityId())
-                    .orElseThrow(() -> new CityException("City not found with id: " + request.getCityId()));
-            existingAirport.setCity(newCity);
+            City city = cityRepository.findById(request.getCityId())
+                    .orElseThrow(() -> new CityException(ErrorCode.CITY_NOT_FOUND));
+
+            airport.setCity(city);
         }
 
-        AirportMapper.updateEntity(request, existingAirport);
+        AirportMapper.updateEntity(request, airport);
 
-        var updatedAirport = airportRepository.save(existingAirport);
-        return AirportMapper.toResponse(updatedAirport);
+        return AirportMapper.toResponse(airportRepository.save(airport));
     }
 
+    // =========================
+    // DELETE
+    // =========================
     @Override
     @Transactional
     @Caching(evict = {
             @CacheEvict(cacheNames = "airports", key = "#id"),
             @CacheEvict(cacheNames = "allAirports", allEntries = true),
-            @CacheEvict(cacheNames = "airportsByIata", allEntries = true),
             @CacheEvict(cacheNames = "airportsByCity", allEntries = true)
     })
-    public void deleteAirport(Long id) throws AirportException {
-        var airport = airportRepository.findById(id)
-                .orElseThrow(() -> new AirportException("Airport not found with id: " + id));
+    public void deleteAirport(Long id) {
+
+        Airport airport = airportRepository.findById(id)
+                .orElseThrow(() -> new AirportException(ErrorCode.AIRPORT_NOT_FOUND));
+
         airportRepository.delete(airport);
     }
 
+    // =========================
+    // BY CITY (CACHE)
+    // =========================
     @Override
     @Transactional(readOnly = true)
     @Cacheable(cacheNames = "airportsByCity", key = "#cityId")
     public List<AirportResponse> getAirportsByCityId(Long cityId) {
-        return airportRepository.findByCityId(cityId).stream()
+
+        return airportRepository.findByCityId(cityId)
+                .stream()
                 .map(AirportMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    // =========================
+    // VALIDATION
+    // =========================
+    private void validateId(Long id) {
+        if (id == null || id <= 0) {
+            throw new AirportException(ErrorCode.INVALID_INPUT);
+        }
+    }
+
+    private void validateIata(String iata) {
+        if (iata == null || iata.isBlank()) {
+            throw new AirportException(ErrorCode.INVALID_INPUT);
+        }
     }
 }
